infra/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

# ===============================
# STATIC RESOURCES
# ===============================
static_resources:
  # ===============================
  # LISTENERS
  # ===============================
  listeners:
  - name: user_api_listener
    
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: messager_api
          route_config:
            name: messanger_routes
            
            virtual_hosts:
            - name: messanger_virtual_host
              domains: ["*"]
              
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,Authorization
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
              
              routes:
              
              - match:
                  prefix: "/api/v1/user"
                route:
                  cluster: user_grpc_cluster
                  timeout: 30s

              - match:
                  prefix: "/api/v1/auth"
                route:
                  cluster: auth_grpc_cluster
                  timeout: 30s

              - match:
                  prefix: "/api/v1/chats"
                route:
                  cluster: chat_grpc_cluster
                  timeout: 30s
              
              - match:
                  prefix: "/"
                direct_response:
                  status: 404
                  body:
                    inline_string: |
                      {
                        "error": "Not Found",
                        "message": "Available endpoints: /api/v1/user, /api/v1/auth, /api/v1/chats",
                      }

          http_filters:
          
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/etc/envoy/messanger_descriptor.pb"
              services: ["chat_v1.ChatV1", "user_v1.UserV1", "auth_v1.AuthV1"]
              
              match_incoming_request_route: true
              
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: true
              
              ignore_unknown_query_parameters: true
          
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: chat_grpc_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN

    # Enable HTTP/2
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}

    health_checks:
    - timeout: 3s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 2
      grpc_health_check:
        service_name: "chat_v1.ChatV1"
    
    load_assignment:
      cluster_name: chat_grpc_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: chat-server
                port_value: 50052

  - name: user_grpc_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN

    # Enable HTTP/2
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}

    transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            
            common_tls_context:
              validation_context:
                trusted_ca:
                  filename: /etc/envoy/certs/ca-cert.pem

    health_checks:
    - timeout: 3s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 2
      grpc_health_check:
        service_name: "user_v1.UserV1"
    
    load_assignment:
      cluster_name: user_grpc_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user-server
                port_value: 50051

  - name: auth_grpc_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN

    # Enable HTTP/2
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}

    health_checks:
    - timeout: 3s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 2
      grpc_health_check:
        service_name: "auth_v1.AuthV1"
    
    load_assignment:
      cluster_name: auth_grpc_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth-service
                port_value: 50050
